Fix: Layout breaks without a title.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -223,6 +223,11 @@ app {
   padding: 0.3rem;
 }
 
+.rw-line {
+    clear: both;
+    width: 100%;
+}
+
 .rw-permalink {
   float: left;
 }
